--- a/TextileApp/.env
+++ b/TextileApp/.env
@@ -9,7 +9,7 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=njn
+DB_DATABASE=njnwebsite
 DB_USERNAME=root
 DB_PASSWORD=admin
 
