--- a/TextileApp/.env
+++ b/TextileApp/.env
@@ -9,9 +9,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=njnwebsite
+DB_DATABASE=njn
 DB_USERNAME=root
-DB_PASSWORD=admin
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
