--- a/TextileApp/.env
+++ b/TextileApp/.env
@@ -11,7 +11,7 @@ DB_HOST=localhost
 DB_PORT=3306
 DB_DATABASE=njnwebsite
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=admin
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
