physical & financial target approval

--- a/TextileApp/.env
+++ b/TextileApp/.env
@@ -9,9 +9,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=njnkardht_db
-DB_USERNAME=njnkardht_usr
-DB_PASSWORD=ZExgr-d456fi
+DB_DATABASE=njnwebsite
+DB_USERNAME=root
+DB_PASSWORD=admin
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
